# rustcalc

./: .gitignore  Cargo.toml  README.md
benches/: lib.rs
src/: calculator.rs  lib.rs  main.rs  parser.rs
tests/: lib.rs
